fix scrolling on small screen

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 
 body {
   height: 100vh;
+  background-color: #f9f3f3;
 }
 
 .bg-bmw {
